# pedro-organiza

./: .gitignore  CHANGELOG.md  COMMERCIAL_LICENCE.md  DECISIONS.md  LICENCE  README.md  api.py  install.bat  install.sh  pedro_cli.py  pyproject.toml  requirements.txt
backend/: active_db.py  alias_engine.py  apply_service.py  cluster_diagnostics.py  cluster_service.py  config.json  config_service.py  consolidate_music.py  container_detection.py  create_export_preset.py  db_migrations.py  db_schema_helpers.py  db_state.py  db_views.py  diagnostics.py  doctor.py  drift_service.py  dupe_service.py  execute_actions.py  export_conflicts.py  export_hashing.py  export_layout.py  export_plan_builder.py  export_plan_schema.py  export_preset_schema.py  export_preview.py  export_schema.py  filter_preset_service.py  genre_discovery.py  genre_service.py  lock_service.py  normalization.py  paths.py  preview_service.py  scan_finalize.py  startup_persistence.py  startup_service.py  startup_validation.py  tag_service.py  taxonomy_core.py
backend/doctor/: contracts.py  doctor_types.py  registry.py  reporting.py  result.py  runner.py
backend/i18n/: de.json  en.json  es.json
backend/reports/: build_copy_plan.py  taxonomy_report.py
cli/: export_cli.py  genres.py  main.py  pedro_cli.py
docs/: ROADMAP.md  normalization.md
docs/specs/: doctor_cli.md  pedro_doctor_spec.md
music-ui/: .gitignore  README.md  index.html
music-ui/src/: App.jsx  index.css  (+2 more)
pedro_organiza.egg-info/: PKG-INFO
tools/: backfill_normalized_fields.py  explore_alias_clusters.py  inspect_alias_clusters.py
(+39 files in other folders)
