[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pedro-organiza"
version = "0.3.0"
requires-python = ">=3.9"

[project.scripts]
pedro = "cli.main:main"

[tool.setuptools]
packages = ["cli", "backend"]

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = ["build", "dist", ".venv", "__pycache__"]


